Introduce TagKey and further RenderSystem abstractions by emilyploszaj