@@ -1,13 +1,13 @@
 package dev.emi.emi.search;
 
-import java.util.Collections;
 import java.util.Set;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+import dev.emi.emi.EmiPort;
 import dev.emi.emi.api.stack.EmiStack;
-import dev.emi.emi.registry.EmiTags;
-import net.minecraft.registry.tag.TagKey;
+import dev.emi.emi.runtime.EmiTagKey;
 
 public class RegexTagQuery extends Query {
 	private final Set<Object> valid;
@@ -19,26 +19,24 @@ public class RegexTagQuery extends Query {
 		} catch (Exception e) {
 		}
 		if (p == null) {
-			valid = Collections.emptySet();
+			valid = com.rewindmc.retroemi.shim.java.Set.of();
 		} else {
-            final Pattern pat = p;
-            valid = TagKey.Type.ITEM.getAll().stream().filter(t -> {
-                if (EmiTags.hasTranslation(t)) {
-                    if (pat.matcher(EmiTags.getTagName(t).getString().toLowerCase()).find()) {
-                        return true;
-                    }
-                }
-                if (pat.matcher(t.id().toString()).find()) {
-                    return true;
-                }
-                return false;
-//            }).map(t -> TagKey.Type.ITEM).collect(Collectors.toSet()), TagKey.Type.BLOCK.getAll().stream().filter(t -> {
-//					if (pat.matcher(t.id().toString()).find()) {
-//						return true;
-//					}
-//					return false;
-            }).map(TagKey::getAll).flatMap(v -> v.stream()).collect(Collectors.toSet());
-        }
+			final Pattern pat = p;
+			valid = Stream.<EmiTagKey<?>>concat(
+				EmiTagKey.fromRegistry(EmiPort.getItemRegistry()),
+				EmiTagKey.fromRegistry(EmiPort.getBlockRegistry())
+			).filter(t -> {
+				if (t.hasTranslation()) {
+					if (pat.matcher(t.getTagName().getString().toLowerCase()).find()) {
+						return true;
+					}
+				}
+				if (pat.matcher(t.id().toString()).find()) {
+					return true;
+				}
+				return false;
+			}).flatMap(v -> v.stream()).collect(Collectors.toSet());
+		}
 	}
 
 	@Override
